test/parser/inputs/valid/simple-for.yah
for i in (0 .. 5):
    spit i

times 3:     
  spit "WAT"

for each fruit in basket:
    spit fruit