test/parser/inputs/invalid/sample3.yah
times 3:     
  spit "WAT